# machine-learning-lab

./: pyproject.toml
data/: test-urls.csv  train-urls.csv
hugging_face/api/: downloader.py  uploader.py
hugging_face/url_relevance/: constants.py
hugging_face/url_relevance/dtos/train_test/: dataframes.py
hugging_face/url_relevance/models/urls_only/tf_idf_logistic_regression/: main.py
tests/: test_hugging_face_interface.py
