[project]
name = "machine-learning-lab"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "evaluate>=0.4.1",
    "transformers>=4.38.0",
    "datasets>=3.2.0",
    "accelerate>=0.27.2",
    "numpy>=1.26.4",
    "multimodal-transformers>=0.3.1",
    "scikit-learn~=1.5.2",
]
